--- a/작업기록/작업목록.md
+++ b/작업기록/작업목록.md
@@ -4,21 +4,21 @@
 
 ### Step 1. Naver 이미지 검색 API를 이용하여 JSON 데이터 파싱
 
-- [ ] a. API 연동
+- [x] a. API 연동
 
-- [ ] b. JSON 데이터 파싱
+- [x] b. JSON 데이터 파싱
 
-- [ ] c. 파싱된 데이터의 title을 테이블 뷰 리스트에 노출 (개수 10개)
+- [x] c. 파싱된 데이터의 title을 테이블 뷰 리스트에 노출 (개수 10개)
 
 
 
 ### Step 2. 테이블 뷰에 이미지 다운로더 추가
 
-- [ ] a. 파싱된 데이터의 이미지를 테이블 뷰 리스트에 노출 (개수 10개)
+- [x] a. 파싱된 데이터의 이미지를 테이블 뷰 리스트에 노출 (개수 10개)
 
-- [ ] b. 이미지를 비율에 맞게 표시
+- [x] b. 이미지를 비율에 맞게 표시
 
-- [ ] c. 재사용 되는 이미지는 캐시로 저장
+- [x] c. 재사용 되는 이미지는 캐시로 저장
 
 
 
