Step3 - 페이징 처리 추가 - sectionHeader를 searchBar로 지정

--- a/작업기록/작업목록.md
+++ b/작업기록/작업목록.md
@@ -24,15 +24,12 @@
 
 ### Step 3. 더보기 기능 추가
 
-- [ ] a. 개수 10개를 기준으로 테이블 뷰를 스크롤 시 데이터가 더 있다면 맨 하단에 인디케이터를 노출하고, 데이터 로딩이 완료되면 데이터 노출
-
+- [x] a. 개수 10개를 기준으로 테이블 뷰를 스크롤 시 데이터가 더 있다면 맨 하단에 인디케이터를 노출하고, 데이터 로딩이 완료되면 데이터 노출
 - [ ] b. 검색창에 입력 후 키보드에 엔터에 Search 노출되고, 누르면 (키보드의 Search)를 검색되도록 추가
-
 - [ ] c. 검색 시 인디케이터 노출하고, 데이터 노출 시에 제거 추가
-
 - [ ] d. 검색 데이터가 없을 때 "데이터가 없습니다." 레이블을 테이블뷰 중간에 노출
-
 - [ ] e. Refresh Control로 데이터 새로고침 추가.
+- [ ] f. NSCache 이용하여 캐싱
 
 
 
