--- a/작업기록/작업목록.md
+++ b/작업기록/작업목록.md
@@ -1,4 +1,4 @@
-# Starter-Project
+# **Starter**-Project
 
 
 
@@ -28,10 +28,7 @@
 - [x] b. 검색창에 입력 후 키보드에 엔터에 Search 노출되고, 누르면 (키보드의 Search)를 검색되도록 추가
 - [x] c. 검색 시 인디케이터 노출하고, 데이터 노출 시에 제거 추가
 
-  * Search 버튼을 눌렀을때
-  * 이슈
-    * acitivityView를 코드로 작성할때 leading, trailing , top, bottom anchor를 잡아줬는데 height와 width가 잡히지 않았음 --> leading, top, height, width를 잡으니 전체 사이즈로 잡혔음.
-- [ ] d. 검색 데이터가 없을 때 "데이터가 없습니다." 레이블을 테이블뷰 중간에 노출
+- [x] d. 검색 데이터가 없을 때 "데이터가 없습니다." 레이블을 테이블뷰 중간에 노출
 - [x] e. Refresh Control로 데이터 새로고침 추가.
 - [x] f. NSCache 이용하여 캐싱
 
@@ -43,9 +40,9 @@
 
 ### Step 4. JSON 데이터 Codable 변환
 
-- [ ] a. 파싱된 데이터의 모델을 생성
+- [x] a. 파싱된 데이터의 모델을 생성
 
-- [ ] b. 모델을 기반으로 Codable을 이용하여 JSON 데이터 파싱
+- [x] b. 모델을 기반으로 Codable을 이용하여 JSON 데이터 파싱
 
 
 
@@ -75,30 +72,4 @@
 
 * 기본 라이브러리 이외 3rd 라이브러리 사용 금지. 
 * 개발 플랜 작성 및 데일리 히스토리 기록 
-* D-Day 정해놓고 개발
-
-
-
-### TableView Header, Footer
-
-* Section 관련 Header, Footer
-  * HeaderInSection
-  * FooterInSection
-* tableview.hearderView, tableView.footerView
-  * footer view는 테이블뷰를 스크롤 했을때 나타나는 마지막 content이다.
-    * 
-  * sectionFooterHeight
-  * sectionHeaderHeight를 결정할 수 있다.
-
-
-
-### tableView.tableFooterView
-
-* prefetch 함수에서 새로운 요청을 하기전 indicatorview를 tableView.tableFooterView로 지정한다.
-* API요청이 끝난후
-  * tableView.tableFooterView = nil
-  * tableView.sectionFooterHeight = 0 
-* 안됐던 경우
-  * tableView.tableFooterView 를 nil값으로 지정하지 않음
-  * 혹은 tableView.sectionFooterHeight를 0으로 지정하지 않음
-  * 이럴경우 빈공간이 남아있게된다.
+* D-Day 정해놓고 개발 
