투데이 작업기록 추가

--- a/작업기록/작업목록.md
+++ b/작업기록/작업목록.md
@@ -48,7 +48,7 @@
 
 ### Step 5. 포토 뷰어 만들기
 
-- [ ] a. 테이블 뷰의 셀(이미지)을 누르면 뷰어가 presenting되고, 좌우 스크롤 시 이전/다음 데이터가 노출
+- [x] a. 테이블 뷰의 셀(이미지)을 누르면 뷰어가 presenting되고, 좌우 스크롤 시 이전/다음 데이터가 노출
 
 
 
