--- a/작업기록/작업목록.md
+++ b/작업기록/작업목록.md
@@ -34,7 +34,11 @@
 
 
 
-\----
+### Step 3.5 (
+
+* [ ] 이미지를 선택후 드래그하여 옮기는 기능 추가
+
+
 
 #### 런처 일정 나온 후 다시 산정
 
@@ -54,9 +58,8 @@
 
 ### Step 6. 포토 뷰어에 더보기 추가
 
-- [ ] a. 최초 로딩된 데이터에서 포토 뷰어를 실행한 후 10개 이상의 데이터를 보려고 할 때 더보기 기능 추가
-
-- [ ] b. 화면을 닫았을 때 테이블 뷰에도 해당 데이터가 노출
+- [x] a. 최초 로딩된 데이터에서 포토 뷰어를 실행한 후 10개 이상의 데이터를 보려고 할 때 더보기 기능 추가
+- [x] b. 화면을 닫았을 때 테이블 뷰에도 해당 데이터가 노출
 
 
 
