특정 셀 삭제, drag and drop 추가

--- a/작업기록/작업목록.md
+++ b/작업기록/작업목록.md
@@ -34,11 +34,15 @@
 
 
 
-### Step 3.5 (
+### Step 3.5 
 
 * [ ] 이미지를 선택후 드래그하여 옮기는 기능 추가
 
+  * [ ] MemoryLayout에 대한 정확한 이해
 
+* [x] 특정셀의 삭제
+
+  
 
 #### 런처 일정 나온 후 다시 산정
 
