--- a/작업기록/작업목록.md
+++ b/작업기록/작업목록.md
@@ -30,9 +30,9 @@
   * EncodingError
   * DecodingError
 * 그외에 부분들 Encoding Containers
-* 이 부분에 대한 공부  12-23 - 12-30
+* 이 부분에 대한 공부  12.23 ~ ( 3일 )
 
-
+ 
 
 ### URL Loading System
 
@@ -47,9 +47,10 @@
 * Uploading
   * Uploading Data to a Website
   * Uploading Streams of Data
-  * 
 
-* 12.31 - 1.3 (시간이 남는 다면 확장해서 공부!)
+* 12.31 ~ 1.3 ( 시간이 남는 다면 확장해서 공부! )
+
+
 
 ### Step 2. 테이블 뷰에 이미지 다운로더 추가 ( 12.12 - 12.13 )
 
@@ -59,12 +60,15 @@
 
 
 
+
+
+
+
 ### Step 3. 더보기 기능 추가 ( 12.13 - 12.17 )
 
 - [x] a. 개수 10개를 기준으로 테이블 뷰를 스크롤 시 데이터가 더 있다면 맨 하단에 인디케이터를 노출하고, 데이터 로딩이 완료되면 데이터 노출
 - [x] b. 검색창에 입력 후 키보드에 엔터에 Search 노출되고, 누르면 (키보드의 Search)를 검색되도록 추가
 - [x] c. 검색 시 인디케이터 노출하고, 데이터 노출 시에 제거 추가
-
 - [x] d. 검색 데이터가 없을 때 "데이터가 없습니다." 레이블을 테이블뷰 중간에 노출
 - [x] e. Refresh Control로 데이터 새로고침 추가.
 - [x] f. NSCache 이용하여 캐싱
@@ -76,10 +80,9 @@
 * [x] 이미지를 선택후 드래그하여 옮기는 기능 추가
 
   * [ ] MemoryLayout에 대한 정확한 이해
-
 * [x] 특정셀의 삭제
 
-  
+
 
 ### Step 4. JSON 데이터 Codable 변환
 
@@ -89,13 +92,9 @@
 
 
 
-
-
 ### Step 5. 포토 뷰어 만들기 ( 12.17 - 12.18 )
 
 - [x] a. 테이블 뷰의 셀(이미지)을 누르면 뷰어가 presenting되고, 좌우 스크롤 시 이전/다음 데이터가 노출
-
-
 
 
 
